corrects scheduler issues

--- a/client/src/components/styles/scheduler.scss
+++ b/client/src/components/styles/scheduler.scss
@@ -6,6 +6,7 @@
     .display-time {
         display: inline-block;
         margin: 0 auto;
+        width: auto;
         line-height: 10px;
         padding: 8px;
         background: #fff;
