--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -9,7 +9,7 @@ body {
     font-size: 16px;
 }
 
-input, select { font-size: 100%; }
+input, select { font-size: 100%; color: #000;}
 
 .fat-cat {
     text-align: center;
