corrects array data

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -37,6 +37,7 @@ input, select { font-size: 100%; color: #000;}
     }
 
     .feed-enabled {
+        padding-bottom: 24px;
 
         .additional-info {
             display: flex;
